# Playground

os/: Makefile  flake.nix
os-lab/: Cargo.toml  Makefile  flake.nix
os-lab/src/: main.rs  sbi.rs
os/.cargo/: config
os/src/: main.rs  sbi.rs
telegram-bot/: Cargo.toml  README.md  flake.nix
telegram-bot/src/: main.rs
